=============
OAR CHANGELOG
=============

version 1.6.1:
==============
    - treate event EXTERMINATE_JOB and suspect all nodes if possible
    - add job state log table
    - add node properties log table
    - add possibility to use sentinelle.rb script in the ping_checker module
    - add a GRID5000 specific scheduler which implement e specific policy
      (oar_sched_gant_g5k)
    - add -s option to oarnodes command --> show only state of nodes
    - add -l option to oarnodes command --> show only the node list
    - now root can delete all jobs like oar user
    - change oardel messages
    - add limitation of the command (with arguments) specified by users::

        regular expression : [\w\s\/\.\-]*

    - change oaremovenode command to oarremovenode
    - enhance job error management and decisions to suspect nodes
    - bugs fix about accounting

version 1.6:
============
    - debug reservation jobs (if the job has not the right amount requested nodes then it will wait a timeout. After it will be launched on rest nodes).
    - add a cache for visualization of the gantt scheme (add two gantt table for the visu)
    - add an event log mechanism. It permits to know all decisions and events that occure in OAR for jobs.
    - detection of errors (they can be traced via event_log table):
        * job working directory does not exist on the node
        * output files can not be created
    - add deploy scheduler awareness (schedule on non deploy nodes firstly)
    - possibility to change property value via oarnodesetting command (-p option)
    - add the command "oaremovenode" that allows to delete a node of the database definitely
    - bug fix : now oarsub can read the user script even if oar has no right
    - now, you can use special value "all" in oarsub ("nodes" resource). It gives all free nodes corresponding to the weight and properties specified.
    - debug Gantt visualization
    - add the possibility to check nodes via nmap