@@ -4,6 +4,7 @@ OAR CHANGELOG
 
 version 1.6.1:
 ==============
+    - now when the connection to the DB fails, OAR retry until 5 tries
     - treate event EXTERMINATE_JOB and suspect all nodes if possible
     - add job state log table
     - add node properties log table
